[package]
name = "linux-loader"
version = "0.1.0"
authors = ["Cathy Zhang <cathy.zhang@intel.com>"]
edition = "2018"
license = "Apache-2.0 AND BSD-3-Clause"

[features]
default = ["elf", "pe"]
elf = []
bzimage = []
pe = []

[dependencies]
vm-memory = ">=0.2.1"

[dev-dependencies]
vm-memory = { version = ">=0.2.1", features = ["backend-mmap"] }
