[package]
name = "linux-loader"
version = "0.1.0"
authors = ["Cathy Zhang <cathy.zhang@intel.com>"]
edition = "2018"
license = "Apache-2.0 AND BSD-3-Clause"
autobenches = false

[features]
default = ["elf", "pe"]
bzimage = []
elf = []
pe = []

[dependencies]
vm-memory = ">=0.2.0"

[dev-dependencies]
criterion = "=0.3.0"
vm-memory = {features = ["backend-mmap"]}

[[bench]]
name = "main"
harness = false

[lib]
bench = false # https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options

[profile.bench]
lto = true
codegen-units = 1
